customize log formatting

--- a/commons/spring-commons/src/main/resources/application-common.properties
+++ b/commons/spring-commons/src/main/resources/application-common.properties
@@ -1,5 +1,9 @@
 spring.application.tempDir=${java.io.tmpdir}/${spring.application.group:spring}/${spring.application.name}
 
+logging.pattern.level=%5p [${spring.zipkin.service.name:${spring.application.name:-}},%X{X-B3-ConversationId:-},%X{X-B3-TraceId:-},%X{X-B3-SpanId:-},%X{X-B3-ParentSpanId:-},%X{X-Span-Export:-}]
+spring.sleuth.propagation-keys=X-B3-ConversationId
+spring.sleuth.log.slf4j.whitelisted-mdc-keys=X-B3-ConversationId
+
 #server.ssl.enabled=false
 #client.ssl.enabled=false
 #security.enabled=false
