--- a/parents/starter-parent/pom.xml
+++ b/parents/starter-parent/pom.xml
@@ -26,6 +26,8 @@
         <dependency-check-maven.version>5.0.0</dependency-check-maven.version>
         <swagger-maven-plugin.version>3.1.7</swagger-maven-plugin.version>
         <swagger-codegen-maven-plugin.version>2.4.5</swagger-codegen-maven-plugin.version>
+        <fabric8-maven-plugin.version>4.4.0</fabric8-maven-plugin.version>
+        <server.port>8080</server.port>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -107,6 +109,76 @@
                     <artifactId>swagger-codegen-maven-plugin</artifactId>
                     <version>${swagger-codegen-maven-plugin.version}</version>
                 </plugin>
+                <plugin>
+                    <groupId>io.fabric8</groupId>
+                    <artifactId>fabric8-maven-plugin</artifactId>
+                    <version>${fabric8-maven-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>build</goal>
+                            </goals>
+                            <phase>install</phase>
+                        </execution>
+                        <execution>
+                            <id>push</id>
+                            <goals>
+                                <goal>push</goal>
+                            </goals>
+                            <phase>deploy</phase>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <verbose>true</verbose>
+                        <images>
+                            <image>
+                                <name>${DOCKER_REPOSITORY}/${project.artifactId}</name>
+<!--                                <name>${DOCKER_REPOSITORY}/spring-microservices</name>-->
+
+                                <build>
+                                    <from>openjdk:8-jdk-alpine</from>
+                                    <tags>
+                                        <tag>${project.version}</tag>
+<!--                                        <tag>${project.artifactId}.latest</tag>-->
+<!--                                        <tag>${project.artifactId}.${project.version}</tag>-->
+                                    </tags>
+
+                                    <ports>
+                                        <port>${server.port}</port>
+                                    </ports>
+
+                                    <entryPoint>
+                                        <!-- exec form for ENTRYPOINT -->
+                                        <exec>
+                                            <arg>java</arg>
+                                            <arg>-jar</arg>
+                                            <arg>/opt/app/${project.artifactId}-${project.version}.jar</arg>
+                                        </exec>
+                                    </entryPoint>
+
+                                    <assembly>
+                                        <mode>dir</mode>
+                                        <name>${project.artifactId}-${project.version}</name>
+                                        <targetDir>/opt/app</targetDir>
+                                        <descriptor>assembly.xml</descriptor>
+                                    </assembly>
+                                </build>
+                            </image>
+                        </images>
+                    </configuration>
+                </plugin>
+                <!--                <plugin>-->
+                <!--                    <groupId>io.fabric8</groupId>-->
+                <!--                    <artifactId>docker-maven-plugin</artifactId>-->
+                <!--                    <version>4.4.1</version>-->
+                <!--                    <configuration>-->
+                <!--                        <imagees>-->
+                <!--                            <image>-->
+                <!--                                <name>{project.groupId}.${project.artifactId}:${project.version}</name>-->
+                <!--                            </image>-->
+                <!--                        </imagees>-->
+                <!--                    </configuration>-->
+                <!--                </plugin>-->
             </plugins>
         </pluginManagement>
 
@@ -136,12 +208,12 @@
         <snapshotRepository>
             <id>project.local</id>
             <name>project</name>
-            <url>file:${project.basedir}/../.repo/snapshot</url>
+            <url>file:${maven.multiModuleProjectDirectory}/.repo/snapshot</url>
         </snapshotRepository>
         <repository>
             <id>project.local</id>
             <name>project</name>
-            <url>file:${project.basedir}/../.repo/release</url>
+            <url>file:${maven.multiModuleProjectDirectory}/.repo/release</url>
         </repository>
     </distributionManagement>
 </project>
