--- a/components/ssl-component/src/main/resources/application-clientSsl.properties
+++ b/components/ssl-component/src/main/resources/application-clientSsl.properties
@@ -1,5 +1,5 @@
 client.ssl.protocol=TLSv1.2
-client.ssl.key-store=classpath:computername-identity.jks
+client.ssl.key-store=classpath:localhost-identity.jks
 client.ssl.key-store-password=jkspass
 client.ssl.key-store-type=jks
 client.ssl.trust-store=classpath:truststore.jks
