change key-alias name

--- a/components/ssl-component/src/main/resources/application-serverSsl.properties
+++ b/components/ssl-component/src/main/resources/application-serverSsl.properties
@@ -2,7 +2,7 @@ server.protocol=https
 
 # server.ssl.enabled is used by eureka service; it is an interoperability mechanism between the 2 components while also allowing them to independently be disabled
 server.ssl.enabled=${ssl.enabled:true}
-server.ssl.key-alias=localhost
+server.ssl.key-alias=keyalias
 server.ssl.key-store=classpath:localhost-identity.jks
 server.ssl.key-store-password=jkspass
 server.ssl.trust-store=classpath:truststore.jks
