--- a/components/eureka-client-component/src/main/resources/application-eureka.properties
+++ b/components/eureka-client-component/src/main/resources/application-eureka.properties
@@ -1,30 +1,37 @@
-# Eureka default values
-registry.server.protocol=${eureka.instance.protocol}
-registry.server.hostname=${eureka.instance.hostname}
-registry.server.port=8761
+# registry client default values
+registry.client.protocol=${server.protocol:http}
+registry.client.hostname=${server.hostname}
+registry.client.port=${server.port}
 
-# all interval properties below may require to be adjusted for performance
+# registry server default values
+registry.server.protocol=${registry.client.protocol}
+registry.server.hostname=${registry.client.hostname}
+registry.server.port=8761
+# comented because username and password should always be provided by servers
+#registry.server.user=eureka
+#registry.server.password=eurekasecret
+
+# default interval properties below
+# could be adjusted for performance depending on environment
 eureka.client.registry-fetch-interval-seconds=10
 eureka.client.eureka-service-url-poll-interval-seconds=5
 eureka.client.initial-instance-info-replication-interval-seconds=15
 eureka.client.instance-info-replication-interval-seconds=10
 eureka.instance.leaseRenewalIntervalInSeconds=10
 
-eureka.instance.protocol=${server.protocol:http}
-eureka.instance.hostname=${server.hostname}
-eureka.instance.port=${server.port:8761}
 
-eureka.instance.url=${eureka.instance.protocol}://${eureka.instance.hostname}:${eureka.instance.port}
-
+eureka.instance.url=${registry.client.protocol}://${registry.client.hostname}:${registry.client.port}
+eureka.instance.hostname=${registry.client.hostname}
 eureka.instance.securePortEnabled=${server.ssl.enabled:false}
-eureka.instance.securePort=${eureka.instance.port:8761}
+eureka.instance.securePort=${registry.client.port}
 eureka.instance.secureVirtualHostName=${spring.application.name}
 eureka.instance.statusPageUrl=${eureka.instance.url}/info
 eureka.instance.healthCheckUrl=${eureka.instance.url}/health
 eureka.instance.homePageUrl=${eureka.instance.url}
 #eureka.instance.instanceId=${server.hostname}:${spring.application.name}:${server.port}
 
-eureka.client.serviceUrl.defaultZone=${registry.server.protocol:${eureka.instance.protocol}}://${registry.server.user:none}:${registry.server.password:none"}@${registry.server.hostname:${eureka.instance.hostname}}:${registry.server.port:8761}/eureka/
+# server url
+eureka.client.serviceUrl.defaultZone=${registry.server.protocol}://${registry.server.user}:${registry.server.password}@${registry.server.hostname}:${registry.server.port}/eureka/
 eureka.client.healthcheck.enabled=true
 
 zuul.host.connect-timeout-millis=${request.timeout:86400000}
