create echo service

--- a/application/echo-service/src/main/resources/local/application.properties
+++ b/application/echo-service/src/main/resources/local/application.properties
@@ -1,7 +1,7 @@
 #server.hostname=${COMPUTERNAME:${hostname:localhost}}
 server.hostname=localhost
-server.port=9025
-spring.application.name=resource-gateway-service
+server.port=8090
+spring.application.name=echo-service
 
 security.server.user=acme
 security.server.password=acmesecret
@@ -9,13 +9,6 @@ security.server.password=acmesecret
 registry.server.user=eureka
 registry.server.password=eurekasecret
 
-swagger.proxy=true
-info.swaggerUrl=${server.protocol:http}://${server.hostname}:${server.port}/swagger-ui.html
-
-zuul.sensitive-headers=Cookie,Set-Cookie
-
 management.endpoints.web.exposure.include=*
-
-server.ssl.client-auth=none
 
 spring.profiles.include=common
