--- a/application/contact-service/src/main/resources/local/application.properties
+++ b/application/contact-service/src/main/resources/local/application.properties
@@ -1,4 +1,5 @@
-server.hostname=${COMPUTERNAME:${hostname:localhost}}
+#server.hostname=${COMPUTERNAME:${hostname:localhost}}
+server.hostname=localhost
 server.port=8083
 spring.application.name=contact-service
 
