--- a/config/contact-service/contact-service.properties
+++ b/config/contact-service/contact-service.properties
@@ -1,4 +1,5 @@
-server.hostname=${COMPUTERNAME:${hostname:localhost}}
+#server.hostname=${COMPUTERNAME:${hostname:localhost}}
+server.hostname=localhost
 server.port=8083
 spring.application.name=contact-service
 
