--- a/config/sso-auth-service/sso-auth-service.properties
+++ b/config/sso-auth-service/sso-auth-service.properties
@@ -1,5 +1,6 @@
+#server.hostname=${COMPUTERNAME:${hostname:localhost}}
+server.hostname=localhost
 server.port=9999
-server.hostname=${COMPUTERNAME:${hostname:localhost}}
 
 # The context path has to be explicit if you are running both the client and the auth server on localhost, otherwise the cookie paths clash and the apps cannot agree on a session identifier.
 # Read more on https://spring.io/guides/tutorials/spring-boot-oauth2/#_social_login_authserver
