--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <module>application/bookmark-service</module>
         <module>application/contact-service</module>
         <module>application/passport-service</module>
+        <module>application/echo-service</module>
         <!--Performance-->
         <module>gatling-performance-testing</module>
     </modules>
