--- a/services/hystrix-dashboard-service/src/main/resources/application.properties
+++ b/services/hystrix-dashboard-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.hostname=${COMPUTERNAME:${hostname:localhost}}
+#server.hostname=${COMPUTERNAME:${hostname:localhost}}
+server.hostname=localhost
 server.port=9903
 
 security.server.user=acme
