--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,69 +1,98 @@
-version: "3"
+version: "3.4"
+
+x-common-variables: &common-variables
+  security.enabled: "true"
+  server.ssl.enabled: "true"
+  client.ssl.enabled: "true"
+
 services:
   sso-auth-service:
     build: services/sso-auth-service/target/docker/radulecu/sso-auth-service/build
-    hostname: sso-auth-service
     ports:
       - 9999:9999
+    environment:
+      <<: *common-variables
+      server.hostname: sso-auth-service
   eureka-service:
     build: services/eureka-service/target/docker/radulecu/eureka-service/build
-    hostname: eureka-service
     ports:
       - 8761:8761
     environment:
+      <<: *common-variables
+      server.hostname: eureka-service
       eureka.instance.hostname: "eureka-service"
-  zipkin-dashboard-service:
-    build: services/zipkin-dashboard-service/target/docker/radulecu/zipkin-dashboard-service/build
-    hostname: zipkin-dashboard-service
-    ports:
-      - 9411:9411
-#  gateway-service:
-#    build: services/gateway-service/target/docker/radulecu/gateway-service/build
-#    hostname: gateway-service
-#    ports:
-#      - 9024:9024
-#    environment:
-#      registry.server.hostname: "eureka-service"
-#      spring.zipkin.base-url: http://zipkin-dashboard-service:9411/
-#      security.oauth2.client.accessTokenUri: https://sso-auth-service:9999/oauth/token
-#      server.ssl.client-auth: none
-#    depends_on:
-#      - eureka-service
-#      - zipkin-dashboard-service
+    zipkin-dashboard-service:
+      build: services/zipkin-dashboard-service/target/docker/radulecu/zipkin-dashboard-service/build
+      ports:
+        - 9411:9411
+      environment:
+        <<: *common-variables
+        server.hostname: zipkin-dashboard-service
+  #  gateway-service:
+  #    build: services/gateway-service/target/docker/radulecu/gateway-service/build
+  #    ports:
+  #      - 9024:9024
+  #    environment:
+  #      <<: *common-variables
+  #      server.hostname: gateway-service
+  #      registry.server.hostname: "eureka-service"
+  #      spring.zipkin.base-url: http://zipkin-dashboard-service:9411/
+  #      security.oauth2.client.accessTokenUri: https://sso-auth-service:9999/oauth/token
+  #      server.ssl.client-auth: none
   resource-gateway-service:
     build: services/resource-gateway-service/target/docker/radulecu/resource-gateway-service/build
-    hostname: resource-gateway-service
     ports:
       - 9025:9025
     environment:
+      <<: *common-variables
+      server.hostname: resource-gateway-service
       registry.server.hostname: "eureka-service"
       spring.zipkin.base-url: http://zipkin-dashboard-service:9411/
       security.server.url: https://sso-auth-service:9999/sso
       server.ssl.client-auth: none
   bookmark-service:
     build: application/bookmark-service/target/docker/radulecu/bookmark-service/build
-    hostname: bookmark-service
     ports:
       - 8082:8082
     environment:
+      <<: *common-variables
+      server.hostname: bookmark-service
       registry.server.hostname: "eureka-service"
       spring.zipkin.base-url: http://zipkin-dashboard-service:9411/
       server.ssl.client-auth: none
-  contact-service:
-    build: application/contact-service/target/docker/radulecu/contact-service/build
-    hostname: contact-service
+    contact-service:
+      build: application/contact-service/target/docker/radulecu/contact-service/build
+      ports:
+        - 8083:8083
+      environment:
+        <<: *common-variables
+        server.hostname: contact-service
+        registry.server.hostname: "eureka-service"
+        spring.zipkin.base-url: http://zipkin-dashboard-service:9411/
+        server.ssl.client-auth: none
+    passport-service:
+      build: application/passport-service/target/docker/radulecu/passport-service/build
+      ports:
+        - 8084:8084
+      environment:
+        <<: *common-variables
+        server.hostname: passport-service
+        registry.server.hostname: "eureka-service"
+        spring.zipkin.base-url: http://zipkin-dashboard-service:9411/
+        server.ssl.client-auth: none
+  echo-service:
+    build: application/echo-service/target/docker/radulecu/echo-service/build
     ports:
-      - 8083:8083
+      - 8090:8090
     environment:
+      <<: *common-variables
+      server.hostname: echo-service
       registry.server.hostname: "eureka-service"
       spring.zipkin.base-url: http://zipkin-dashboard-service:9411/
       server.ssl.client-auth: none
-  passport-service:
-    build: application/passport-service/target/docker/radulecu/passport-service/build
-    hostname: passport-service
+  nginx-service:
+    image: nginx
     ports:
-      - 8084:8084
-    environment:
-      registry.server.hostname: "eureka-service"
-      spring.zipkin.base-url: http://zipkin-dashboard-service:9411/
-      server.ssl.client-auth: none
+      - "8080:80"
+    volumes:
+      - $PWD/nginx/nginx.conf:/etc/nginx/nginx.conf
