Add readme for docker, minikube and kubectl install, add new scripts for project build/init

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,12 @@
 .repo/*
 **/tmp/**
 **/target/
+
 **/node
 **/node_modules
+
+# Certificates
+**/*service.cer
+**/*service-identity.jks
+**/truststore.jks
+
