--- a/parents/service-parent/pom.xml
+++ b/parents/service-parent/pom.xml
@@ -14,6 +14,8 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <description>Contains the dependencies for the common components used as part of the project so that component alignment can be done easier</description>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
