Add Swagger Security on resource gateway service

--- a/components/swagger-component/src/main/resources/application-swagger.properties
+++ b/components/swagger-component/src/main/resources/application-swagger.properties
@@ -1,2 +1,2 @@
 swagger.enabled=true
-swagger.blacklist=${spring.application.name},resource-gateway-service,eureka-service,client-service,client-service-light
+swagger.blacklist=gateway-service,resource-gateway-service,eureka-service,client-service,client-service-light
