migration to new spring security

--- a/application/echo-service/src/main/resources/cloudconfig/bootstrap.properties
+++ b/application/echo-service/src/main/resources/cloudconfig/bootstrap.properties
@@ -2,4 +2,4 @@ spring.cloud.config.uri=http://localhost:8888
 spring.cloud.config.username=config
 spring.cloud.config.password=configsecret
 
-spring.application.name=test-service
+spring.application.name=echo-service
