--- a/services/resource-gateway-service/pom.xml
+++ b/services/resource-gateway-service/pom.xml
@@ -21,7 +21,7 @@
     <dependencies>
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
-            <artifactId>sso-client-component</artifactId>
+            <artifactId>resource-security-client-component</artifactId>
         </dependency>
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
