--- a/commons/spring-commons/pom.xml
+++ b/commons/spring-commons/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>ro.rasel.spring.microservices.commons</groupId>
             <artifactId>commons</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <!--Spring Boot-->
