--- a/parents/starter-parent/pom.xml
+++ b/parents/starter-parent/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.2.RELEASE</version>
+        <version>2.3.5.RELEASE</version>
     </parent>
 
     <groupId>ro.rasel.spring.microservices</groupId>
@@ -34,7 +34,7 @@
             <dependency>
                 <groupId>ro.rasel.spring.microservices</groupId>
                 <artifactId>dependency-parent</artifactId>
-                <version>0.0.1-SNAPSHOT</version>
+                <version>${project.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
