--- a/services/eureka-service/pom.xml
+++ b/services/eureka-service/pom.xml
@@ -21,7 +21,15 @@
     <dependencies>
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
-            <artifactId>sso-client-component</artifactId>
+            <artifactId>resource-security-client-component</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ro.rasel.spring.microservices.components</groupId>
+            <artifactId>web-security-client-component</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ro.rasel.spring.microservices.components</groupId>
+            <artifactId>basic-security-client-component</artifactId>
         </dependency>
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
