--- a/services/hystrix-dashboard-service/pom.xml
+++ b/services/hystrix-dashboard-service/pom.xml
@@ -5,9 +5,9 @@
 
     <parent>
         <groupId>ro.rasel.spring.microservices</groupId>
-        <artifactId>starter-parent</artifactId>
+        <artifactId>service-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../../parents/starter-parent/pom.xml</relativePath>
+        <relativePath>../../parents/service-parent/pom.xml</relativePath>
     </parent>
 
     <artifactId>hystrix-dashboard-service</artifactId>
@@ -20,13 +20,11 @@
     <dependencies>
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
-            <artifactId>sso-client-component</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <artifactId>web-security-client-component</artifactId>
         </dependency>
         <dependency>
             <groupId>ro.rasel.spring.microservices.components</groupId>
             <artifactId>ssl-component</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <!--Spring Cloud-->
         <dependency>
