add docker maven build (run maven inside a docker container)

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>services</module>
         <module>applications</module>
         <module>gatling-performance-testing</module>
+        <module>dockerBuild</module>
     </modules>
 
     <build>
