--- a/components/ssl-component/src/main/resources/application-serverSsl.properties
+++ b/components/ssl-component/src/main/resources/application-serverSsl.properties
@@ -10,4 +10,4 @@ server.ssl.trust-store-password=jkspass
 server.ssl.key-store-provider=SUN
 server.ssl.key-store-type=JKS
 server.ssl.protocol=TLSv1.2
-server.ssl.client-auth=need
+server.ssl.client-auth=none
