--- a/parents/dependency-parent/pom.xml
+++ b/parents/dependency-parent/pom.xml
@@ -44,7 +44,7 @@
         <!--Plugins-->
         <gmavenplus-plugin.version>1.7.1</gmavenplus-plugin.version>
         <groovy-all.version>2.4.17</groovy-all.version>
-        <dependency-check-maven.version>6.3.2</dependency-check-maven.version>
+        <dependency-check-maven.version>7.2.0</dependency-check-maven.version>
     </properties>
 
     <dependencyManagement>
@@ -202,11 +202,13 @@
         <snapshotRepository>
             <id>project.local</id>
             <name>project</name>
+            <!--suppress UnresolvedMavenProperty -->
             <url>file:${maven.multiModuleProjectDirectory}/.repo/snapshot</url>
         </snapshotRepository>
         <repository>
             <id>project.local</id>
             <name>project</name>
+            <!--suppress UnresolvedMavenProperty -->
             <url>file:${maven.multiModuleProjectDirectory}/.repo/release</url>
         </repository>
     </distributionManagement>
