initial kubernetes configuration

--- a/components/eureka-client-component/src/main/resources/application-eureka.properties
+++ b/components/eureka-client-component/src/main/resources/application-eureka.properties
@@ -4,8 +4,8 @@ registry.client.hostname=${server.hostname}
 registry.client.port=${server.port}
 
 # registry server default values
-registry.server.protocol=${registry.client.protocol}
-registry.server.hostname=${registry.client.hostname}
+registry.server.protocol=${server.protocol:http}
+registry.server.hostname=${server.hostname}
 registry.server.port=8761
 # comented because username and password should always be provided by servers
 #registry.server.user=eureka
