--- a/services/eureka-service/src/main/resources/local/application-cloud.properties
+++ b/services/eureka-service/src/main/resources/local/application-cloud.properties
@@ -1,12 +1,9 @@
+server.hostname=eureka-service.default.svc.cluster.local
 server.port=80
-
-feign.client.bookmark-service.url=bookmark-service.default.svc.cluster.local:80
-feign.client.contact-service.url=contact-service.default.svc.cluster.local:80
 
 server.ssl.enabled=false
 client.ssl.enabled=false
 security.enabled=false
-eureka.client.enabled=false
 
 registry.server.hostname=eureka-service.default.svc.cluster.local
 registry.server.port=80
