--- a/applications/contact-service/src/main/resources/local/application-cloud.properties
+++ b/applications/contact-service/src/main/resources/local/application-cloud.properties
@@ -5,5 +5,6 @@ client.ssl.enabled=false
 security.enabled=false
 eureka.client.enabled=false
 
-
-
+registry.server.hostname=eureka-service.default.svc.cluster.local
+registry.server.port=80
+registry.client.hostname=${spring.application.name}.default.svc.cluster.local
