--- a/kubernetes/resource-gateway-service.yml
+++ b/kubernetes/resource-gateway-service.yml
@@ -1,33 +1,35 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: bookmark-service
+  name: resource-gateway-service
   labels:
-    app: bookmark-service
+    app: resource-gateway-service
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
-      app: bookmark-service
+      app: resource-gateway-service
   template:
     metadata:
       labels:
-        app: bookmark-service
+        app: resource-gateway-service
     spec:
       containers:
-        - name: bookmark-service
-          image: radulecu/bookmark-service
+        - name: resource-gateway-service
+          image: radulecu/resource-gateway-service
           command: ["java"]
           args:
             - "-XX:MaxRAMPercentage=80"
             - "-XX:+ExitOnOutOfMemoryError"
             - "-jar"
-            - "/opt/app/bookmark-service.jar"
+            - "/opt/app/resource-gateway-service.jar"
           ports:
-            - containerPort: 8082
+            - containerPort: 8083
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: cloud
+            - name: eureka.client.enabled
+              value: "false"
           resources:
             requests:
               memory: "512Mi"
@@ -55,15 +57,15 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: bookmark-service
+  name: resource-gateway-service
   labels:
-    run: bookmark-service
+    run: resource-gateway-service
 spec:
   type: NodePort
   ports:
     - port: 80
       protocol: TCP
       targetPort: 80
-      nodePort: 30082
+      nodePort: 31025
   selector:
-    app: bookmark-service
+    app: resource-gateway-service
